Added related posts.

--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@ full_posts: 5
 {% for post in site.posts %}
   {% if forloop.index < page.full_posts %}
   <div class='post'>
-    <span class='date'>{{post.date}}</span>
+    <span class='date'>{{post.date | date_to_string}}</span>
     <h1><a href='{{post.url}}'>{{post.title}}</a></h1>
     <div class='body'>{{post.content}}</div>
     <a href='{{post.url}}#disqus_thread'>View Comments</a>
@@ -19,7 +19,7 @@ full_posts: 5
     {% endif %}
     <tr>
       <th><a href='{{ post.url }}'>{{ post.title }}</a></th>
-      <td>{{ post.date }}</td>
+      <td>{{ post.date | date_to_string }}</td>
       <td><a href='{{post.url}}#disqus_thread'>Comments</a></td>
     </tr>
   {% endif %}
