Adding RSS links and <link>. D'oh.

--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,8 @@ title: Blog
 full_posts: 5
 ---
 
+<a href='http://feeds2.feedburner.com/mbleigh' class='float-right'><img src='/images/subscribe.png' alt='Subscribe to XML Feed'/></a>
+
 {% for post in site.posts %}
   {% if forloop.index < page.full_posts %}
   <div class='post'>
