--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Michael Bleigh on the Web
 ---
 
 <div class='home_box' id='home_left'>
-  <h2>Latest Blog Post (<a href='/blog.html'>More</a>)</h2>
+  <h2><a href='http://feeds2.feedburner.com/mbleigh' class='float-right'><img src='/images/subscribe-icon.gif' alt='Subscribe'/></a> Latest Blog Post (<a href='/blog.html'>More</a>)</h2>
   
   <div class='post'>
     <h1><a href='{{site.posts.first.url}}'>{{site.posts.first.title}}</a></h1>
