Site redesign, fun fun.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Michael Bleigh on the Web
   </div>
 </div>
 <div class='home_box' id='home_right'>
-  <h2>Open Source (<a href='/open-source.html'>More</a>)</h2>
+  <h2>Open Source</h2>
   <div id='github-projects'>
     <div class="repo">  <h3><a href="http://github.com/mbleigh/acts-as-taggable-on">acts-as-taggable-on</a></h3>  <span class="desc">A tagging plugin for Rails applications that allows for custom tagging along dynamic contexts.</span></div><div class="repo">  <h3><a href="http://github.com/mbleigh/subdomain-fu">subdomain-fu</a></h3>  <span class="desc">A new plugin approach to attempting to solve the usage of subdomains in linking and routing in Rails projects.</span></div><div class="repo">  <h3><a href="http://github.com/mbleigh/seed-fu">seed-fu</a></h3>  <span class="desc">Advanced seed data handling for Rails, combining the best practices of several methods together.</span></div><div class="repo">  <h3><a href="http://github.com/mbleigh/uberkit">uberkit</a></h3>  <span class="desc">The UberKit is a Rails plugin with a set of UI tools to ease common development.</span></div><div class="repo">  <h3><a href="http://github.com/mbleigh/mash">mash</a></h3>  <span class="desc">Mash is a Hash with the ability to read, write, and test for the presence of arbitrary attributes using method calls.</span></div><div class="repo">  <h3><a href="http://github.com/mbleigh/fetches">fetches</a></h3>  <span class="desc">A Rails plugin to simplify the fetching and memoization of records for parameter-based finds.</span></div>
   </div>
